--- a/vignettes/colors.Rmd
+++ b/vignettes/colors.Rmd
@@ -293,17 +293,17 @@ Palettes known to `seecol()` are labeled by their respective names.
 Labeling the custom palettes can be achieved by setting the `pal_names` argument to a character vector of appropriate length: 
 
 ```{r set-custom-palette-names, fig.width = 6, fig.height = 3, fig.align = 'center'}
-seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), 
-       pal_names = c("my_pair", "blue_bord", "blue_yell"),
-       title = "Labeling custom color palettes")
+seecol_2(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), 
+         pal_names = c("my_pair", "blue_bord", "blue_yell"),
+         title = "Labeling custom color palettes")
 ```
 
 If the `pal_names` argument is specified and corresponds to the length of palettes overall, the default names of all color palettes are overwritten by `pal_names`:
 
 ```{r set-all-palette-names, fig.width = 6, fig.height = 3, fig.align = 'center'}
-seecol(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), 
-       pal_names = c("my_pair", "blue_bord", "blue_yell", "blue_black", "mix_pair"),
-       title = "Comparing and labeling custom color palettes")
+seecol_2(list(my_pair, pal1, pal2, pal_unikn, pal_unikn_pair), 
+         pal_names = c("my_pair", "blue_bord", "blue_yell", "blue_black", "mix_pair"),
+         title = "Comparing and labeling custom color palettes")
 ```
 
 As before, we can use the `n` argument for obtaining shorter subsets of color palettes: 
@@ -548,9 +548,9 @@ Once a new palette has been defined (and is available in your current R environm
 # seecol(list(pal_freiburg_info, pal_freiburg_basic, pal_mpg, pal_princeton_1))
 
 # Scaled version: 
-seecol(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9,
-       pal_names = c("Uni Freiburg", "Princeton Uni", "Max Planck", "Uni Konstanz"),
-       title = "Comparing scaled color palettes")
+seecol_2(list(pal_freiburg_basic, pal_princeton_1, pal_mpg, pal_unikn), n = 9,
+         pal_names = c("Uni Freiburg", "Princeton Uni", "Max Planck", "Uni Konstanz"),
+         title = "Comparing scaled color palettes")
 ```
 
 
