using seecol() instead of seecol_2()

--- a/README.Rmd
+++ b/README.Rmd
@@ -557,10 +557,10 @@ Once a new palette is defined (and available in your current R environment), the
 # Compare and extend custom color palettes:
 pals <- list(pal_freiburg_basic, pal_mpg, pal_princeton_1, pal_unikn)
 lbls <- c("Uni Freiburg", "Max Planck", "Princeton Uni", "Uni Konstanz")
-# seecol_2(pals, pal_names = lbls,                           # basic versions
-#          title = "Compare and label custom color palettes") 
-seecol_2(pals, n = 9, pal_names = lbls,                      # scaled versions
-         title = "Compare and label custom color palettes")   
+# seecol(pals, pal_names = lbls,                          # basic versions
+#        title = "Compare and label custom color palettes") 
+seecol(pals, n = 9, pal_names = lbls,                     # scaled versions
+       title = "Compare and label custom color palettes")   
 ```
 
 ## Text decorations
